added the download option

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </div>
 
       <button onclick="generateQr()">Generate QR Code</button>
+      <button id="downloadBtn" class="download-btn" onclick="downloadQR()" style="display: none;">Download QR Code</button>
       
       <div class="footer">
         <p>&copy; 2025 QR Code Generator. All rights reserved.</p>
@@ -30,17 +31,28 @@
       let imgbox = document.getElementById("imgbox");
       let qrimg = document.getElementById("qrimg");
       let qrtxt = document.getElementById("qrtxt");
+      let downloadBtn = document.getElementById("downloadBtn");
 
       function generateQr() {
         if (qrtxt.value.length > 0) {
           qrimg.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" + qrtxt.value;
           imgbox.classList.add("show-img");
+          downloadBtn.style.display = "block";
         } else {
           qrtxt.classList.add('error');
           setTimeout(() => {
             qrtxt.classList.remove('error');
           }, 1000);
         }
+      }
+
+      function downloadQR() {
+        const link = document.createElement('a');
+        link.href = qrimg.src;
+        link.download = 'qr-code.png';
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
       }
 
       // Add keyboard support
