--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Generate QR codes for any text or URL" />
     <meta name="theme-color" content="#494eea" />
+    <link rel="icon" type="imgage/png" href="QR Code Generator Icon.png">
     <link rel="stylesheet" href="style.css" />
     <title>QR Code Generator</title>
   </head>
